update example component

--- a/example/components/column-4/component.html
+++ b/example/components/column-4/component.html
@@ -1,6 +1,6 @@
-<row>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-</row>
+<div class="uk-row" required="true">
+  <div class="uk-width-1-4"></div>
+  <div class="uk-width-1-4"></div>
+  <div class="uk-width-1-4"></div>
+  <div class="uk-width-1-4"></div>
+</div>
