--- a/example/components/column-2/component.html
+++ b/example/components/column-2/component.html
@@ -1,4 +1,4 @@
-<row>
-    <column></column>
-    <column></column>
-</row>
+<div class="uk-row" required="true">
+  <div class="uk-width-3-6"></div>
+  <div class="uk-width-3-6"></div>
+</div>
