--- a/example/components/column-3/component.html
+++ b/example/components/column-3/component.html
@@ -1,5 +1,5 @@
-<row>
-    <column></column>
-    <column></column>
-    <column></column>
-</row>
+<div class="uk-row" required="true">
+  <div class="uk-width-2-6"></div>
+  <div class="uk-width-2-6"></div>
+  <div class="uk-width-2-6"></div>
+</div>
