--- a/example/components/column-5/component.html
+++ b/example/components/column-5/component.html
@@ -1,7 +1,7 @@
-<row>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-</row>
+<div class="uk-row" required="true">
+  <div class="uk-width-1-5"></div>
+  <div class="uk-width-1-5"></div>
+  <div class="uk-width-1-5"></div>
+  <div class="uk-width-1-5"></div>
+  <div class="uk-width-1-5"></div>
+</div>
