--- a/example/components/column-6/component.html
+++ b/example/components/column-6/component.html
@@ -1,8 +1,8 @@
-<row>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-    <column></column>
-</row>
+<div class="uk-row" required="true">
+  <div class="uk-width-1-6"></div>
+  <div class="uk-width-1-6"></div>
+  <div class="uk-width-1-6"></div>
+  <div class="uk-width-1-6"></div>
+  <div class="uk-width-1-6"></div>
+  <div class="uk-width-1-6"></div>
+</div>
