fix dnd component left panel to canvas

--- a/example/components/column-5/component.html
+++ b/example/components/column-5/component.html
@@ -1,7 +1,7 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-1-5"></div>
-  <div class="uk-width-1-5"></div>
-  <div class="uk-width-1-5"></div>
-  <div class="uk-width-1-5"></div>
-  <div class="uk-width-1-5"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-5" kind="column"></div>
+  <div class="uk-width-1-5" kind="column"></div>
+  <div class="uk-width-1-5" kind="column"></div>
+  <div class="uk-width-1-5" kind="column"></div>
+  <div class="uk-width-1-5" kind="column"></div>
 </div>
