--- a/example/components/column-1/component.html
+++ b/example/components/column-1/component.html
@@ -1,3 +1,3 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-1-1"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-1" kind="column"></div>
 </div>
