--- a/example/components/column-2/component.html
+++ b/example/components/column-2/component.html
@@ -1,4 +1,4 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-3-6"></div>
-  <div class="uk-width-3-6"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-2" kind="column"></div>
+  <div class="uk-width-1-2" kind="column"></div>
 </div>
