--- a/example/components/column-3/component.html
+++ b/example/components/column-3/component.html
@@ -1,5 +1,5 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-2-6"></div>
-  <div class="uk-width-2-6"></div>
-  <div class="uk-width-2-6"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-3" kind="column"></div>
+  <div class="uk-width-1-3" kind="column"></div>
+  <div class="uk-width-1-3" kind="column"></div>
 </div>
