--- a/example/components/column-4/component.html
+++ b/example/components/column-4/component.html
@@ -1,6 +1,6 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-1-4"></div>
-  <div class="uk-width-1-4"></div>
-  <div class="uk-width-1-4"></div>
-  <div class="uk-width-1-4"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-4" kind="column"></div>
+  <div class="uk-width-1-4" kind="column"></div>
+  <div class="uk-width-1-4" kind="column"></div>
+  <div class="uk-width-1-4" kind="column"></div>
 </div>
