--- a/example/components/column-6/component.html
+++ b/example/components/column-6/component.html
@@ -1,8 +1,8 @@
-<div class="uk-row" required="true">
-  <div class="uk-width-1-6"></div>
-  <div class="uk-width-1-6"></div>
-  <div class="uk-width-1-6"></div>
-  <div class="uk-width-1-6"></div>
-  <div class="uk-width-1-6"></div>
-  <div class="uk-width-1-6"></div>
+<div class="uk-grid" required-parent kind="row">
+  <div class="uk-width-1-6" kind="column"></div>
+  <div class="uk-width-1-6" kind="column"></div>
+  <div class="uk-width-1-6" kind="column"></div>
+  <div class="uk-width-1-6" kind="column"></div>
+  <div class="uk-width-1-6" kind="column"></div>
+  <div class="uk-width-1-6" kind="column"></div>
 </div>
