--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -475,5 +475,33 @@
     &--x {
       display: inline !important;
     }
+
+    &--color-picker {
+      display: flex;
+
+      &__box {
+        width: 18px;
+        height: 18px;
+        display: inline-block;
+      }
+
+      &__overlay {
+        position: absolute;
+        z-index: 99;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        width: 100%;
+        height: 100%;
+        background: $transparent-black;
+        button {
+          width: 90%;
+        }
+      }
+    }
   }
 }
