--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -442,16 +442,28 @@
       display: flex;
       align-items: center;
       margin-top: 0!important;
-      margin-left: 10px;
-      width: 50%;
+      margin-right: 10px;
 
       &:first-child {
         margin-left: 0;
       }
 
-      label {
-        margin-right: 5px;
+      &:last-child {
+        margin-left: auto;
+        margin-right: 0;
+      }
+
+      .label {
         min-width: 35px;
+      }
+
+      &>.icon {
+        min-width: 16px;
+      }
+
+      label {
+        padding-right: 5px;
+        margin-right: 5px !important;
         text-align: right;
         align-items: flex-end;
         justify-content: flex-end;
