--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -479,6 +479,8 @@
 
       label {
         margin-right: auto;
+        min-width: 35px;
+        margin-right: 5px;
         & + * {
           margin-left: auto;
           margin-top: 0 !important;
