Column's icon position
Column icon position is always middle-centered.

--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -459,6 +459,10 @@
 
       &>.icon {
         min-width: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
       }
 
       label {
