--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -459,7 +459,13 @@
         margin-left: 0;
       }
 
-      &:last-child {
+      &:first-child:last-child {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+      }
+
+      &:not(:first-child):last-child {
         margin-left: auto;
         margin-right: 0;
       }
