--- a/src/assets/scss/base/_fields.scss
+++ b/src/assets/scss/base/_fields.scss
@@ -497,11 +497,12 @@
       }
       display: flex;
       align-items: center;
+      justify-content: flex-end;
 
       label {
+        margin-right: 0;
         margin-right: auto;
         min-width: 35px;
-        margin-right: 5px;
         & + * {
           margin-left: auto;
           margin-top: 0 !important;
