--- a/src/assets/scss/layout/_right_panel.scss
+++ b/src/assets/scss/layout/_right_panel.scss
@@ -17,14 +17,15 @@ $layout_box: '#{$prefix}__right-panel-layout-box';
       z-index: 99;
       top: 0;
       left: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      align-content: center;
+      display: flex !important;
+      flex-direction: column !important;
+      justify-content: center !important;
+      align-items: center !important;
+      align-content: center !important;
       width: 100%;
       height: 100%;
       background: $transparent-black;
+      pointer-events: all !important;
       button {
         width: 90%;
       }
