--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -18,7 +18,8 @@ $dark-two: #171c1e;
 $charcoal-semi-dark: #2b3235;
 $gunmetal-two: #575e60;
 $pastel-red: #dc5a5a;
-$orange: #e98a38;
+$orange: #F9690E;
+$green: #26A65B;
 $stone: #414141;
 $warm-grey: #979797;
 $warm-grey-ten: #888888;
