Add dropline style
Dropline style for horizontal and vertical.

--- a/src/assets/scss/layout/_canvas_tools.scss
+++ b/src/assets/scss/layout/_canvas_tools.scss
@@ -168,6 +168,18 @@ $canvas-selector: '#{$prefix}__canvas-selector';
           }
         }
       }
+
+      &-dropline {
+        position: fixed;
+        z-index: 999;
+        background-color: $normal-sky-blue;
+        &.dropline--horizontal {
+          height: 2px;
+        }
+        &.dropline--vertical {
+          width: 2px;
+        }
+      }
     }
 
     &-block-component {
