--- a/src/assets/scss/layout/_accordion.scss
+++ b/src/assets/scss/layout/_accordion.scss
@@ -96,7 +96,7 @@
       margin-bottom: 10px;
       a {
         color: $warm-grey-nine;
-        font-weight: bold;
+        font-weight: 600;
         font-size: 12px;
         margin: 0 3px;
         text-decoration: none;
