chore(feature): text toolbar

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -5,4 +5,5 @@
 @import "layout/right_panel";
 @import "layout/workspace";
 @import "layout/canvas_tools";
+@import "layout/text_toolbar";
 @import "layout/screen_tools";
