--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -326,7 +326,7 @@
 
 /* BEGIN Light */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/Light/OpenSans-Light.eot');
   src: url('#{$assets_path}/fonts/open-sans/Light/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/Light/OpenSans-Light.woff') format('woff'),
@@ -340,7 +340,7 @@
 
 /* BEGIN Light Italic */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/LightItalic/OpenSans-LightItalic.eot');
   src: url('#{$assets_path}/fonts/open-sans/LightItalic/OpenSans-LightItalic.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/LightItalic/OpenSans-LightItalic.woff') format('woff'),
@@ -354,7 +354,7 @@
 
 /* BEGIN Regular */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/Regular/OpenSans-Regular.eot');
   src: url('#{$assets_path}/fonts/open-sans/Regular/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/Regular/OpenSans-Regular.woff') format('woff'),
@@ -368,7 +368,7 @@
 
 /* BEGIN Italic */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/Italic/OpenSans-Italic.eot');
   src: url('#{$assets_path}/fonts/open-sans/Italic/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/Italic/OpenSans-Italic.woff') format('woff'),
@@ -382,7 +382,7 @@
 
 /* BEGIN Semibold */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/Semibold/OpenSans-Semibold.eot');
   src: url('#{$assets_path}/fonts/open-sans/Semibold/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/Semibold/OpenSans-Semibold.woff') format('woff'),
@@ -396,7 +396,7 @@
 
 /* BEGIN Semibold Italic */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/SemiboldItalic/OpenSans-SemiboldItalic.eot');
   src: url('#{$assets_path}/fonts/open-sans/SemiboldItalic/OpenSans-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/SemiboldItalic/OpenSans-SemiboldItalic.woff') format('woff'),
@@ -410,7 +410,7 @@
 
 /* BEGIN Bold */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/Bold/OpenSans-Bold.eot');
   src: url('#{$assets_path}/fonts/open-sans/Bold/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/Bold/OpenSans-Bold.woff') format('woff'),
@@ -424,7 +424,7 @@
 
 /* BEGIN Bold Italic */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/BoldItalic/OpenSans-BoldItalic.eot');
   src: url('#{$assets_path}/fonts/open-sans/BoldItalic/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/BoldItalic/OpenSans-BoldItalic.woff') format('woff'),
@@ -438,7 +438,7 @@
 
 /* BEGIN Extrabold */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/ExtraBold/OpenSans-ExtraBold.eot');
   src: url('#{$assets_path}/fonts/open-sans/ExtraBold/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/ExtraBold/OpenSans-ExtraBold.woff') format('woff'),
@@ -452,7 +452,7 @@
 
 /* BEGIN Extrabold Italic */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif !important;
   src: url('#{$assets_path}/fonts/open-sans/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot');
   src: url('#{$assets_path}/fonts/open-sans/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
   url('#{$assets_path}/fonts/open-sans/ExtraBoldItalic/OpenSans-ExtraBoldItalic.woff') format('woff'),
